--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,15 +12,32 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.btn:focus, .btn:active {
+    outline: none !important;
+    box-shadow: none;
+}
+
+.no-anchor-decoration, .no-anchor-decoration:hover {
+    text-decoration: none;
+    color: inherit;
 }
 
 body {
-  margin-bottom: 60px;
-  background-color: #12161d;
-  color: #fff;
+    margin-bottom: 60px;
+    background-color: #12161d;
+    color: #fff;
+}
+
+.custom-radiobtn-group label.e-btn {
+    box-shadow: none !important;
+    border: 1px solid #fff;
+    background-color: rgb(34 43 51);
+    color: #fff;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 .e-bigger {
@@ -36,15 +53,32 @@ body {
     width: 50%;
 }
 
-.custom-radiobtn-group label.e-btn{
-    box-shadow: none !important;
-    border: 1px solid #fff;
-    background-color: rgb(34 43 51);
-    color: #fff;
-}
-
 .e-btn-group.custom-radiobtn-group input:checked + label.e-btn {
     background-color: #fff;
     color: #212b36;
     border: 1px solid #fff;
+}
+
+/* Grid */
+.e-grid {
+    border: 0;
+    border-radius: 5px;
+}
+
+.e-grid .e-gridcontent, .e-grid .e-table {
+    background-color: #1a222b;
+}
+
+.e-grid .e-gridheader {
+    border: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 10px;
+    background-color: #222b33;
+}
+
+/* Widget */
+.widget {
+    border-radius: 1rem;
+    background-color: #1a222b;
 }
