Edited design of master

--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<ExpenseTrackerNET7.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
+    ViewData["PageActionText"] = "+ New Category";
+    ViewData["PageActionUrl"] = "/Category/AddOrEdit";
 }
 
 <div class="row">
