--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,25 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <main role="main" class="pb-3">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <div class="d-flex flex-column mb-5">
+                                <div class="d-flex mb-1">
+                                    <div>
+                                        @if (@ViewData["PageActionText"] != null)
+                                        {
+                                            <a class="btn btn-outline-success text-white" href="@ViewData["PageActionUrl"]">
+                                                @ViewData["PageActionText"]
+                                            </a>
+                                        }
+                                    </div>
+                                </div>
+                                <div class="d-flex mb-1 mt-1">
+                                    <ejs-breadcrumb id="default"></ejs-breadcrumb>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     @RenderBody()
                 </main>
             </div>
