--- a/Views/Transaction/AddOrEdit.cshtml
+++ b/Views/Transaction/AddOrEdit.cshtml
@@ -1,45 +1,50 @@
 ﻿@model ExpenseTrackerNET7.Models.Transaction
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = Model.Id == 0 ? "Create a New Transaction" : "Edit Transaction";
 }
 
-<h1>Create</h1>
-
-<h4>Transaction</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" />
-                <span asp-validation-for="Amount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Note" class="control-label"></label>
-                <input asp-for="Note" class="form-control" />
-                <span asp-validation-for="Note" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TransactionDate" class="control-label"></label>
-                <input asp-for="TransactionDate" class="form-control" />
-                <span asp-validation-for="TransactionDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="col-md-7">
+        <div class="widget p-5">
+            <form asp-action="AddOrEdit">
+                <input type="hidden" name="Id" value="@Model.Id" />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group mb-3">
+                    Category:
+                    @*<select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>*@
+                    <ejs-dropdownlist id="Categories" ejs-for="CategoryId"
+                    dataSource="@ViewBag.CategoryList" placeholder="Category" 
+                    floatLabelType="Always">
+                    <e-dropdownlist-fields value="Id" text="TitleWithIcon"></e-dropdownlist-fields>
+                </ejs-dropdownlist>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Amount" class="control-label"></label>
+                    <input asp-for="Amount" class="form-control" />
+                    <span asp-validation-for="Amount" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Note" class="control-label"></label>
+                    <input asp-for="Note" class="form-control" />
+                    <span asp-validation-for="Note" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <ejs-datepicker id="datepicker" ejs-for="@Model.TransactionDate" placeholder="Date" 
+                    floatLabelType="Always" format="dd/MM/yyyy"></ejs-datepicker>
+                    <span asp-validation-for="TransactionDate" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <ejs-button id="outline" cssClass="e-success" content="Submit" type="submit"></ejs-button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div class="col-md-5">
+        <div class="widget h-100 d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-money-bill-transfer fa-10x"></i>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
