--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <script src="https://cdn.syncfusion.com/ej2/20.4.38/dist/ej2.min.js"></script>
 </head>
 <body class="e-bigger">
+    <partial name="_Sidebar" />
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -34,31 +35,37 @@
             </div>
         </nav>
     </header>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-10">
-                <main role="main" class="pb-3">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="d-flex flex-column mb-5">
-                                <div class="d-flex mb-1">
-                                    <div>
-                                        @if (@ViewData["PageActionText"] != null)
-                                        {
-                                            <a class="btn btn-outline-success text-white" href="@ViewData["PageActionUrl"]">
-                                                @ViewData["PageActionText"]
-                                            </a>
-                                        }
+    <div class="MainContent">
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="@(ViewData[" IsDashboard"] == null ? "col-md-10" : "col-md-12")">
+                    <main role="main" class="pb-3">
+                        @*Only show the header of the page and breadcrumb if it isn't the dashboard*@
+                        @if (ViewData["IsDashboard"] == null)
+                        {
+                         <div class="row">
+                            <div class="col-md-4">
+                                <div class="d-flex flex-column mb-5">
+                                    <div class="d-flex mb-1">
+                                        <div>
+                                            @if (@ViewData["PageActionText"] != null)
+                                            {
+                                                <a class="btn btn-outline-success text-white" href="@ViewData["PageActionUrl"]">
+                                                    @ViewData["PageActionText"]
+                                                </a>
+                                            }
+                                        </div>
+                                    </div>
+                                    <div class="d-flex mb-1 mt-1">
+                                        <ejs-breadcrumb id="default"></ejs-breadcrumb>
                                     </div>
                                 </div>
-                                <div class="d-flex mb-1 mt-1">
-                                    <ejs-breadcrumb id="default"></ejs-breadcrumb>
-                                </div>
                             </div>
-                        </div>
-                    </div>
-                    @RenderBody()
-                </main>
+                        </div>   
+                        }
+                        @RenderBody()
+                    </main>
+                </div>
             </div>
         </div>
     </div>
