--- a/Views/Transaction/Index.cshtml
+++ b/Views/Transaction/Index.cshtml
@@ -6,45 +6,36 @@
     ViewData["PageActionUrl"] = "/Transaction/AddOrEdit";
 }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Amount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Note)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TransactionDate)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Note)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TransactionDate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-md-7">
+        <ejs-grid id="GridTransactions" dataSource="@Model" gridLines="None" allowSorting="true" allowPaging="true">
+            <e-grid-columns>
+                @*<e-grid-column headerText="Category" field="Category.TitleWithIcon"></e-grid-column>*@
+                <e-grid-column headerText="Category" field="CategoryTitleWithIcon"></e-grid-column>
+                <e-grid-column headerText="Amount" field="FormattedAmount"></e-grid-column>
+                <e-grid-column headerText="Date" field="TransactionDate" type="date" format="MMM-dd-yyyy" width="140px"></e-grid-column>
+                <e-grid-column headerText="Actions" template="#ActionColumnTemplate"></e-grid-column>
+            </e-grid-columns>
+        </ejs-grid>
+    </div>
+    <div class="col-md-5">
+        <div class="widget h-100 d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-shop fa-2x"></i>
+        </div>
+    </div>
+</div>
+
+<script id="ActionColumnTemplate" type="text/x-template">
+    <div class="d-flex flex-row justify-content-center">
+        <a class="btn btn-sm no-anchor-decoration" href="/Transaction/AddOrEdit/${Id}">
+            <i class="fa-solid fa-pen fa-4xl"></i>
+        </a>
+        <form action="/Transaction/Delete/${Id}" method="post">
+    @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-sm btn-link no-anchor-decoration"
+            onclick="confirm('Sure to delete the Record?')">
+                <i class="fa-solid fa-trash-can fa-4xl text-danger"></i>
+            </button>
+        </form>
+    </div>
+</script>
